--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "php" : "^7.0",
-        "illuminate/support": "^5.6"
+        "illuminate/support": "^5.5|^5.6"
     },
     "require-dev": {
         "phpunit/phpunit": "5.*|^6.3",
